# Linear-algebra-test

./: .gitignore  2025-10-14_AMGX预条件器对比.md  2025-10-14_GPU_Native性能分析.md  2025-10-14_GPU矩阵组装指南.md  2025-10-14_性能测试总结.md  CMakeLists.txt  CONFIG_GUIDE.md  DATA_FLOW_DIAGRAM.md  GPU_IMPLEMENTATION_ANALYSIS.md  GPU_NATIVE_PERFORMANCE_COMPARISON.md  HYPRE_GPU_NATIVE_ISSUE_SUMMARY.md  README.md  SUPPORTED_OPTIONS.md  build.sh  env_setup.sh  rebuild.py  run_benchmarks.sh  solver_config.yaml  使用说明_换电脑.md  工具使用指南.md  库安装配置说明.md  文档说明.md  移植指南.md  项目总览.md
amgx_gpu_native/: CMakeLists.txt  poisson_solver.cu
amgx_tests/: CMakeLists.txt  poisson_solver.cpp
common/: CMakeLists.txt  config_reader.h  gpu_matrix_generator.cuh  matrix_generator.h  result_writer.h  timer.h
doc/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md
doc/archived_docs/: README.md
doc/archived_docs/2025-10-14/: FINAL_SUMMARY.md  PERFORMANCE_COMPARISON.md  README.md  SOLVER_CONFIGURATIONS.md
doc/test_results/: README.md
doc/test_results/2025-10-14/: README.md  amgx_results.csv  amgx_results.json  hypre_gpu_results.csv  hypre_gpu_results.json  hypre_results.csv  hypre_results.json  petsc_gpu_results.csv  petsc_gpu_results.json  petsc_results.csv  petsc_results.json
hypre_gpu_native/: CMakeLists.txt  poisson_solver.cu  poisson_solver_v2.cu  poisson_solver_v3.cpp
hypre_gpu_tests/: CMakeLists.txt  poisson_solver.cpp
hypre_tests/: CMakeLists.txt  poisson_solver.cpp
petsc_gpu_native/: CMakeLists.txt  poisson_solver.cu
petsc_gpu_tests/: CMakeLists.txt  poisson_solver.cpp
petsc_tests/: CMakeLists.txt  poisson_solver.cpp
